--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-	background: $white;
+	background: http://www.flatfriends.org.uk/wp-content/uploads/2017/10/fall-autumn-red-season-1200x800.jpg;
   font: 18px/1.4 $helvetica;
-  color: $darkGray;
+  color: #009933;
 }
 
 .container {
