--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: http://www.flatfriends.org.uk/wp-content/uploads/2017/10/fall-autumn-red-season-1200x800.jpg;
+	background: https://blogmedia.evbstatic.com/wp-content/uploads/wpmulti/sites/8/2016/09/20174702/Autumn-event-ideas.jpg
   font: 18px/1.4 $helvetica;
   color: #009933;
 }
