--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background; //blogmedia.evbstatic.com/wp-content/uploads/wpmulti/sites/8/2016/09/20174702/Autumn-event-ideas.jpg
+	background; http://www.qygjxz.com/data/out/124/4295614-images-of-autumn.jpg
   font: 18px/1.4 $helvetica;
   color: #009933;
 }
