--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background; https://www.qygjxz.com/data/out/124/4295614-images-of-autumn.jpg
+	background; 1dib1q3k1s3e11a5av3bhlnb-wpengine.netdna-ssl.com/wp-content/uploads/2015/08/autumn-foliage-nyc.jpg
   font: 18px/1.4 $helvetica;
   color: #009933;
 }
