--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background; https://1dib1q3k1s3e11a5av3bhlnb-wpengine.netdna-ssl.com/wp-content/uploads/2015/08/autumn-foliage-nyc.jpg
+background; https://images.pexels.com/photos/355302/pexels-photo-355302.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260
   font: 18px/1.4 $helvetica;
   color: #009933;
 }
