--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-background: url("https://images.pexels.com/photos/355302/pexels-photo-355302.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+background: url("https://cdn-image.travelandleisure.com/sites/default/files/1488833588/sunset-rod-and-reel-pier-anna-maria-island-florida-ANNAMARIA0306.jpg");
   font: 18px/1.4 $helvetica;
   color: #009933;
 }
