--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,8 @@ html {
 }
 
 body {
-background: url("https://cdn-image.travelandleisure.com/sites/default/files/1488833588/sunset-rod-and-reel-pier-anna-maria-island-florida-ANNAMARIA0306.jpg");
+background: url("https://cdn-image.travelandleisure.com/sites/default/files/1488833588/sunset-rod-and-reel-pier-anna-maria-island-florida-ANNAMARIA0306.jpg"
+background-repeat: no-repeat;
   font: 18px/1.4 $helvetica;
   color: #009933;
 }
