--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-background-image: url("https://cdn-image.travelandleisure.com/sites/default/files/1488833588/sunset-rod-and-reel-pier-anna-maria-island-florida-ANNAMARIA0306.jpg"
+background-image: url("https://www.amtrak.com/content/dam/projects/dotcom/english/public/images/heros/Region_California_HeroBanner_1_9.jpg/_jcr_content/renditions/cq5dam.web.2125.1195.jpeg")
   font: 18px/1.4 $helvetica;
   color: #009933;
 }
