--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,8 @@ html {
 }
 
 body {
-background-image: url("https://www.amtrak.com/content/dam/projects/dotcom/english/public/images/heros/Region_California_HeroBanner_1_9.jpg/_jcr_content/renditions/cq5dam.web.2125.1195.jpeg")
-  font: 18px/1.4 $helvetica;
+background: url("https://www.amtrak.com/content/dam/projects/dotcom/english/public/images/heros/Region_California_HeroBanner_1_9.jpg/_jcr_content/renditions/cq5dam.web.2125.1195.jpeg")
+  font:; 18px/1.4 $helvetica;
   color: #009933;
 }
 
