--- a/style.scss
+++ b/style.scss
@@ -25,9 +25,13 @@ background: url("https://www.amtrak.com/content/dam/projects/dotcom/english/publ
 
 .container {
   margin: 0 auto;
-  max-width: 740px;
+  max-width: 850px;
   padding: 0 10px;
   width: 100%;
+  background:rgba(0, 38, 77,0.9);
+  border-radius: 25px;
+  padding: 20px; 
+  border-bottom: 1px solid white;
 }
 
 h1, h2, h3, h4, h5, h6 {
