--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-background: url("https://www.amtrak.com/content/dam/projects/dotcom/english/public/images/heros/Region_California_HeroBanner_1_9.jpg/_jcr_content/renditions/cq5dam.web.2125.1195.jpeg")
-  font; 18px/1.4 $helvetica;
-  color: #009933;
+background: url("https://www.amtrak.com/content/dam/projects/dotcom/english/public/images/heros/Region_California_HeroBanner_1_9.jpg/_jcr_content/renditions/cq5dam.web.2125.1195.jpeg");
+font: 18px/1.4 $helvetica;
+color: #009933;
 }
 
 .container {
