--- a/style.scss
+++ b/style.scss
@@ -36,7 +36,7 @@ color: #009933;
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: $darkerGray;
+  color: #009933;
   font-weight: bold;
 
   line-height: 1.7;
