--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,7 @@ html {
 body {
 background: url("https://www.amtrak.com/content/dam/projects/dotcom/english/public/images/heros/Region_California_HeroBanner_1_9.jpg/_jcr_content/renditions/cq5dam.web.2125.1195.jpeg");
 	background-repeat: no-repeat;
+	background-attachment: fixed;
 	
 font: 18px/1.4 $helvetica;
 color: #009933;
