--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,9 @@ html {
 
 body {
 background: url("https://www.amtrak.com/content/dam/projects/dotcom/english/public/images/heros/Region_California_HeroBanner_1_9.jpg/_jcr_content/renditions/cq5dam.web.2125.1195.jpeg");
-	background-repeat: repeat-x;
+	 background-repeat: no-repeat;
+  background-position: cover;
+  background-attachment: fixed;
 	
 	
 font: 18px/1.4 $helvetica;
