--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-background: url("https://www.amtrak.com/content/dam/projects/dotcom/english/public/images/heros/Region_California_HeroBanner_1_9.jpg/_jcr_content/renditions/cq5dam.web.2125.1195.jpeg");
+background: url("https://www.deeperblue.com/wp-content/uploads/2018/04/AdobeStock_163802143.jpeg");
 	 background-repeat: no-repeat;
   background-position: cover;
   background-attachment: fixed;
