--- a/style.scss
+++ b/style.scss
@@ -24,7 +24,7 @@ background: url("https://www.deeperblue.com/wp-content/uploads/2018/04/AdobeStoc
   background-attachment: fixed;
 	
 	
-font: 18px/1.4 $Verdana;
+font: 18px/1.4 $helvetica;
 color: #009933;
 }
 
